--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,30 +1,32 @@
-legend{
-font-size: 2rem;
-}
-    
+/* INSCHRIJF FORMULIER */
+
 fieldset{
     border: none;
-    display: grid;
-
+    margin: auto;
 }
 
-.description-text{
-
+legend{
+font-size: 2rem;
+text-align: center;
 }
 
 input{
+    display:block;
     border-radius: 5px;
     padding: 8px;
+    width: 75%;
+    max-width: 30rem;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
 }
 
 button{
-    background-color: brown;
-}
-
-button.yay{
-    background-color: green;
-}
-
-input:user-invalid {
-    background: #faa;
+    width: 8rem;
+    height: 2.5rem;
+    border-radius: 2rem;
+    border: none;
+    display: block;
+    margin: auto;
 }
