--- a/stylesheet.css
+++ b/stylesheet.css
@@ -105,6 +105,10 @@ main{
     }
 }
 
+.informatie-stekjes{
+    margin: 2rem;
+}
+
 .inschrijf-button{
     color: black;
     background-color: #faa;
@@ -114,4 +118,7 @@ main{
 
 .img-infomatie{
     width: 100%;
+    max-height: 18rem;
+    width: 100%;
+    object-fit: cover;
 }
