--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,6 +4,14 @@ body{
     margin: 0;
 }
 
+header{
+    margin: 0;
+}
+
+.logo{
+    background-color: #faa;
+}
+
 ::selection {
     color: rgb(0, 174, 17);
 }
