--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,6 +22,17 @@ nav{
 }
 
 
+/* AGENDA */
+
+.img-header-agenda{
+    width: 100%;
+    max-height: 18rem;
+    width: 100%;
+    object-fit: cover;
+}
+
+
+
 /* INSCHRIJF FORMULIER */
 
 fieldset{
