--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,6 +18,22 @@ header{
 }
 
 
+/* FONTS */
+
+h1{
+    text-align: center;
+    max-width: 20rem;
+}
+
+p{
+    display:flex;
+    text-align: center;
+    max-width: 38rem;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+
 /* AGENDA */
 
 .nav-agenda{
@@ -76,6 +92,10 @@ a{
     text-decoration: none;
 }
 
+.form-btn{
+    cursor: pointer;
+}
+
 /* a {
     width: 6rem;
     border-radius: 2rem;
@@ -100,24 +120,13 @@ a{
 }
 
 
-/* FONTS */
-
-h1{
-    text-align: center;
-}
-
-p{
-    text-align: center;
-}
-
-
 
 /* INFORMATIE PAGINA */
 
 
 
 
-main{
+.informatie-main{
 
     p{
         text-align: left;
