--- a/stylesheet.css
+++ b/stylesheet.css
@@ -156,3 +156,52 @@ a{
     width: 100%;
     object-fit: cover;
 }
+
+
+/* LOADING SCREEN */
+
+
+div{
+ opacity: 0;
+}
+
+div.loading-screen{
+    opacity: 100%;
+    background-color: rgb(253, 255, 240);
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    height: auto;
+    
+    display: grid;
+    grid-template-rows: 1fr 2rem 1fr;
+    grid-row-gap: 1rem;
+
+    p{
+        display: block;
+        margin: 0;
+        max-width: none;
+        align-self: top;
+    }
+
+    h1{
+        display: block;
+        margin: 0;
+        max-width: none;
+        align-self: center;
+    }
+
+    .img{
+        align-self: end;
+    }
+}
+
+.dancing-harry{
+    width: 16rem;
+    margin: auto;
+    display:block;
+}
