--- a/stylesheet.css
+++ b/stylesheet.css
@@ -249,7 +249,7 @@ div.loading-screen{
 
 .workshop-parent-2{
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.678)),
-    url(./assets/ZADEN.webp);
+    url(./assets/fiets\ met\ plant.webp);
     background-position: center;
     background-size: cover;
     border-radius: 1.4rem;
@@ -257,7 +257,7 @@ div.loading-screen{
 
 .workshop-parent-3{
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.678)),
-    url(./assets/ZADEN.webp);
+    url(./assets/Aardbei.png);
     background-position: center;
     background-size: cover;
     border-radius: 1.4rem;
@@ -265,7 +265,7 @@ div.loading-screen{
 
 .workshop-parent-4{
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.678)),
-    url(./assets/ZADEN.webp);
+    url(./assets/schuur.webp);
     background-position: center;
     background-size: cover;
     border-radius: 1.4rem;
@@ -279,11 +279,16 @@ div.loading-screen{
     h3{
         color: white;
         text-align: center;
+        align-self: end;
     }
 
     p{
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
         color: white;
         text-align: center;
+        max-width: 10rem;
     }
 
     a{
