--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,20 +22,25 @@ header{
 
 h1{
     text-align: center;
+    display: block;
+    margin-left: 0;
+    margin-right: 0;
+    color: rgb(0, 0, 0);
+}
+
+h2{
     text-align: center;
-    position: absolute;
-    top: 14.3rem;
-    left: 50%;
-    right: 50%;
-    color: white;
+    display: block;
+    margin-left: 0;
+    margin-right: 0;
 }
 
 p{
-    display:flex;
     text-align: center;
-    max-width: 38rem;
+    display: block;
     margin-left: 0;
     margin-right: 0;
+    max-width: 38rem;
 }
 
 
@@ -81,6 +86,11 @@ input{
     margin-bottom: 1rem;
 }
 
+label{
+    display: block;
+   text-align: center;
+}
+
 input:user-invalid {
     background: #faa;
 }
@@ -91,7 +101,7 @@ button {
     border: none;
     display: block;
     margin: auto;
-    background-color: aquamarine;
+    background-color: var(--primary-highlight-color);
     color: black;
     padding: 12px;
 }
