--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,15 @@ body{
     margin: 0;
 }
 
-header{
+.header-informatie{
+    margin: 0;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.678)),
+    url(./assets/ZADEN.webp);
+    background-position: center;
+    background-size: cover;
+}
+
+.header-agenda{
     margin: 0;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.678)),
     url(./assets/schuur.webp);
@@ -36,10 +44,7 @@ header{
 /* FONTS */
 
 h1{
-    padding: 120px;
     text-align: center;
-    min-height: 18rem;
-    max-height: 18rem;
     margin-right: auto;
     margin-left: auto;
     margin-top: auto;
@@ -63,6 +68,9 @@ p{
     max-width: 38rem;
 }
 
+.pagina-titels{
+    padding: 120px;
+}
 
 /* AGENDA */
 
@@ -187,14 +195,27 @@ form{
 .informatie-main{
 
     p{
-        text-align: left;
+        text-align: center;
         max-width: 30rem;
         margin-bottom: 2.5rem;
     }
 
     h1{
-        text-align: left;
-        
+        text-align: center;
+        color: var(--secondairy-text-color);
+        padding: none;
+    }
+
+    a{
+        display: block;
+        color: var(--primary-text-color);
+        left: auto;
+        margin-left: auto;
+        right: auto;
+        border-radius: 2rem;
+        background: var(--primary-highlight-color);
+        width: 7rem;
+        margin: auto;
     }
 }
 
