--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@ body{
 .header-informatie{
     margin: 0;
     background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.678)),
-    url(./assets/ZADEN.webp);
+    url(./assets/fiets\ met\ plant.webp);
     background-position: center;
     background-size: cover;
 }
